Add styles for login button

--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -1,4 +1,9 @@
-  /* Модальное окно */
+header {
+  box-shadow: 0 5px 25px rgba(0, 0, 0, .2);
+  background-color: #242424;
+}
+ 
+ /* Модальное окно */
 .modal {
   position: fixed;
   top: 0;
