--- a/frontend/src/components/MovieList.css
+++ b/frontend/src/components/MovieList.css
@@ -1,7 +1,21 @@
 .movies-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
     gap: 30px;
-    padding: 30px;
-}
+    justify-content: center;
+    padding: 20px;
+  }
+  
+  @media (max-width: 768px) {
+    .movies-container {
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .movies-container {
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    }
+  }
+  
   
