--- a/frontend/src/components/MovieListItem.css
+++ b/frontend/src/components/MovieListItem.css
@@ -3,7 +3,7 @@
     color: white;
     border-radius: 10px;
     overflow: hidden;
-    width: 250px;
+    width: 275px;
     height: 450px;
     margin: 10px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -20,7 +20,7 @@
   
   .movie-poster {
     width: 100%;
-    height: 70%;
+    height: 85%;
     object-fit: cover;
   }
   
@@ -34,7 +34,7 @@
   
   .movie-title-container {
     display: flex;
-    justify-content: space-between; /* Размещаем элементы по краям */
+    justify-content: space-between;
     align-items: center;
   }
   
